# realestate-repo

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
scripts/: com.ivan.realestate.plist
src/realestate/: cli.py  config.py  db.py  dedupe.py  enrich.py  gmail_draft.py  google_auth.py  normalize.py  sheets.py
src/realestate/sources/: base.py  clasificados.py  facebook.py  zillow.py
tests/: test_dedupe.py  test_enrich.py
