[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "realestate"
version = "0.1.0"
description = "Puerto Rico FSBO/FRBO lead scraper with drafts-only outreach"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "playwright>=1.47",
    "gspread>=6.1",
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "click>=8.1",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "types-requests",
]

[project.scripts]
realestate = "realestate.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/realestate"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["gspread.*", "selectolax.*", "googleapiclient.*", "google_auth_oauthlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
